[package]
name = "RelayServer"
version = "0.1.0"
edition = "2024"

[dependencies]
stunclient = "0.4"
axum = "0.8.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum-macros = "0.5"
tower-http = { version = "0.6", features = ["cors"] }